--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
   encoding: utf8
   pool: 5
   username: root
-  password: root #本地mysql密码为root
+  password: root
   socket: /tmp/mysql.sock
 
 development:
